--- a/app/src/main/res/layout/activity_login_new.xml
+++ b/app/src/main/res/layout/activity_login_new.xml
@@ -20,8 +20,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="33dp"
-            android:layout_marginRight="42dp"
             android:layout_marginTop="30dp"
+            android:layout_marginRight="42dp"
             android:gravity="center_vertical"
             android:orientation="horizontal">
 
@@ -41,7 +41,6 @@
                 android:background="@null"
                 android:gravity="center_vertical"
                 android:hint="@string/phone_number_hint"
-                android:inputType="phone"
                 android:maxLength="13"
                 android:textColorHint="#30000000"
                 android:textSize="15sp" />
@@ -58,16 +57,16 @@
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:layout_marginLeft="26.5dp"
-            android:layout_marginRight="28.5dp"
             android:layout_marginTop="5dp"
+            android:layout_marginRight="28.5dp"
             android:background="#f0f0f0" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="33dp"
-            android:layout_marginRight="42dp"
             android:layout_marginTop="24dp"
+            android:layout_marginRight="42dp"
             android:gravity="center_vertical"
             android:orientation="horizontal">
 
@@ -105,8 +104,8 @@
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:layout_marginLeft="26.5dp"
-            android:layout_marginRight="28.5dp"
             android:layout_marginTop="5dp"
+            android:layout_marginRight="28.5dp"
             android:background="#f0f0f0" />
 
         <TextView
@@ -114,8 +113,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="right"
-            android:layout_marginRight="36dp"
             android:layout_marginTop="16dp"
+            android:layout_marginRight="36dp"
             android:text="忘记密码?"
             android:textColor="#ebc852"
             android:textSize="12sp" />
@@ -123,11 +122,12 @@
 
         <Button
             android:id="@+id/btn_login"
+            style="@style/Widget.AppCompat.Button.Borderless"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_marginLeft="27dp"
-            android:layout_marginRight="27dp"
             android:layout_marginTop="41dp"
+            android:layout_marginRight="27dp"
             android:background="@drawable/selector_btn_yellow"
             android:enabled="false"
             android:text="登 录"
