--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -40,7 +40,7 @@
                 android:layout_weight="1"
                 android:background="@null"
                 android:gravity="center_vertical"
-                android:hint="@string/phone_number_hint"
+                android:hint="请输入您的手机号码"
                 android:inputType="phone"
                 android:maxLength="13"
                 android:textColorHint="#30000000"
