--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -55,13 +55,13 @@
 
     <!-- PK进度条 -->
     <declare-styleable name="PkProgressView">
-        <attr name="text"/>
-        <attr name="backColorDefault" format="color"/>
-        <attr name="backColor" format="color"/>
-        <attr name="defaultPercent" format="integer"/>
-        <attr name="textSize"/>
-        <attr name="textColor"/>
-        <attr name="alignLeft" format="dimension"/>
+        <attr name="text" />
+        <attr name="backColorDefault" format="color" />
+        <attr name="backColor" format="color" />
+        <attr name="defaultPercent" format="integer" />
+        <attr name="textSize" />
+        <attr name="textColor" />
+        <attr name="alignLeft" format="dimension" />
     </declare-styleable>
 
     <!-- *公共属性* -->
@@ -111,20 +111,25 @@
     <!-- 加载动画 -->
     <declare-styleable name="LoadingIndicatorView">
         <attr name="minWidth" format="dimension" />
-        <attr name="maxWidth" format="dimension"/>
+        <attr name="maxWidth" format="dimension" />
         <attr name="minHeight" format="dimension" />
-        <attr name="maxHeight" format="dimension"/>
-        <attr name="indicatorName" format="string"/>
-        <attr name="indicatorColor" format="color"/>
+        <attr name="maxHeight" format="dimension" />
+        <attr name="indicatorName" format="string" />
+        <attr name="indicatorColor" format="color" />
     </declare-styleable>
 
     <declare-styleable name="ShadowContainer">
-        <attr name="containerShadowColor" format="color"/>
-        <attr name="containerShadowRadius" format="dimension"/>
-        <attr name="containerDeltaLength" format="dimension"/>
-        <attr name="containerCornerRadius" format="dimension"/>
-        <attr name="deltaX" format="dimension"/>
-        <attr name="deltaY" format="dimension"/>
+        <attr name="containerShadowColor" format="color" />
+        <attr name="containerShadowRadius" format="dimension" />
+        <attr name="containerDeltaLength" format="dimension" />
+        <attr name="containerCornerRadius" format="dimension" />
+        <attr name="deltaX" format="dimension" />
+        <attr name="deltaY" format="dimension" />
+    </declare-styleable>
+
+    <declare-styleable name="HomeSortTab">
+        <attr name="image" format="reference" />
+        <attr name="select" format="boolean" />
     </declare-styleable>
 
 </resources>
