--- a/app/src/main/res/layout/activity_personal_info.xml
+++ b/app/src/main/res/layout/activity_personal_info.xml
@@ -132,6 +132,7 @@
                         android:orientation="horizontal">
 
                         <LinearLayout
+                            android:id="@+id/ll_rank"
                             android:layout_width="0dp"
                             android:layout_height="match_parent"
                             android:layout_weight="1"
