--- a/app/src/main/res/layout/item_3_peak_rank.xml
+++ b/app/src/main/res/layout/item_3_peak_rank.xml
@@ -6,10 +6,10 @@
     android:orientation="horizontal">
 
     <ImageView
+        android:id="@+id/iv_top_peak"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:scaleType="fitXY"
-        android:src="@drawable/bg_top_peak" />
+        android:scaleType="fitXY" />
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="112dp"
