--- a/app/src/main/res/layout/activity_peak_rank.xml
+++ b/app/src/main/res/layout/activity_peak_rank.xml
@@ -10,7 +10,78 @@
         android:id="@+id/recycler_peak"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_weight="1"
         android:background="@drawable/bg_peak_rank"
         android:overScrollMode="never" />
 
+
+    <LinearLayout
+        android:id="@+id/ll_bottom_peak"
+        android:layout_width="match_parent"
+        android:layout_height="45dp"
+        android:gravity="center_vertical"
+        android:orientation="horizontal"
+        android:paddingLeft="22dp"
+        android:paddingRight="12dp">
+
+        <TextView
+            android:id="@+id/tv_num_peak"
+            android:layout_width="16dp"
+            android:layout_height="16dp"
+            android:gravity="center"
+            android:textColor="#fefefe"
+            android:textSize="10sp" />
+
+        <ImageView
+            android:id="@+id/iv_level_peak"
+            android:layout_width="35.5dp"
+            android:layout_height="13.5dp"
+            android:layout_marginLeft="14dp" />
+
+        <TextView
+            android:id="@+id/tv_nick_peak"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="6.5dp"
+            android:layout_weight="1"
+            android:textColor="#fff7f7"
+            android:textSize="12sp" />
+
+        <LinearLayout
+            android:layout_width="88.5dp"
+            android:layout_height="24.5dp"
+            android:orientation="vertical">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="end"
+                android:text="距上一名差"
+                android:textColor="#fff7f7"
+                android:textSize="10sp" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="end"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/tv_contribute_peak"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="end"
+                    android:textColor="#FFF226"
+                    android:textSize="10sp" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="end"
+                    android:text="贡献"
+                    android:textColor="#fff7f7"
+                    android:textSize="10sp" />
+            </LinearLayout>
+        </LinearLayout>
+    </LinearLayout>
 </LinearLayout>
