--- a/app/src/main/res/layout/comm_recycler.xml
+++ b/app/src/main/res/layout/comm_recycler.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     android:orientation="horizontal">
 
-    <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
+    <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -17,7 +17,3 @@
         android:layout_height="match_parent" />
 
 </LinearLayout>
-
-    <!--<LinearLayout--><!--android:id="@+id/ll_enter"--><!--android:layout_width="200dp"--><!--android:layout_height="wrap_content"--><!--android:layout_marginTop="20dp"--><!--android:orientation="horizontal"--><!--android:padding="5dp"--><!--android:background="@drawable/bg_chat_normal"--><!--android:visibility="gone">-->
-
-    <!--<com.whzl.mengbi.ui.widget.view.RollTextView--><!--android:id="@+id/tv_enter"--><!--android:layout_width="match_parent"--><!--android:layout_height="wrap_content"--><!--android:marqueeRepeatLimit="1"--><!--android:ellipsize="marquee"--><!--android:singleLine="true"--><!--android:textSize="14sp"--><!--android:textColor="#ffffff"--><!--android:padding="5dp"/>--><!--</LinearLayout>--><!--</RelativeLayout>-->
