--- a/app/src/main/res/layout/activity_flop.xml
+++ b/app/src/main/res/layout/activity_flop.xml
@@ -50,7 +50,7 @@
 
             </android.support.constraint.ConstraintLayout>
 
-            <RelativeLayout
+            <android.support.constraint.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center_vertical"
@@ -62,7 +62,10 @@
                     android:layout_width="105dp"
                     android:layout_height="34dp"
                     android:background="@drawable/ic_price_flop"
-                    android:gravity="center_vertical" />
+                    android:gravity="center_vertical"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
 
                 <TextView
                     android:id="@+id/tv_price_tips"
@@ -72,55 +75,116 @@
                     android:layout_marginLeft="34dp"
                     android:text="翻牌价格："
                     android:textColor="@color/white"
-                    android:textSize="14sp" />
+                    android:textSize="14sp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
 
                 <TextView
                     android:id="@+id/tv_price_flop"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
-                    android:layout_toRightOf="@id/tv_price_tips"
                     android:textColor="#FFC81F"
-                    android:textSize="14sp" />
+                    android:textSize="14sp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintLeft_toRightOf="@id/tv_price_tips"
+                    app:layout_constraintTop_toTopOf="parent" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
-                    android:layout_toRightOf="@id/tv_price_flop"
                     android:layout_weight="1"
                     android:text="萌豆"
                     android:textColor="@color/white"
-                    android:textSize="14sp" />
+                    android:textSize="14sp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintLeft_toRightOf="@id/tv_price_flop"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <RelativeLayout
+                    android:id="@+id/progress_layout"
+                    android:layout_width="116dp"
+                    android:layout_height="7dp"
+                    android:layout_centerInParent="true"
+                    android:layout_marginRight="30dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintTop_toTopOf="parent">
+
+                    <ImageView
+                        android:layout_width="116dp"
+                        android:layout_height="7dp"
+                        android:src="@drawable/shape_luck_flop" />
+
+                    <com.whzl.mengbi.ui.widget.view.RoundCornerImageView
+                        android:id="@+id/progress_luck"
+                        android:layout_width="120dp"
+                        android:layout_height="7dp"
+                        android:layout_marginEnd="0dp"
+                        android:scaleType="centerCrop" />
+
+                </RelativeLayout>
+
+                <View
+                    android:id="@+id/view_luck"
+                    android:layout_width="19dp"
+                    android:layout_height="19dp"
+                    android:layout_marginRight="14dp"
+                    android:background="@drawable/circle_luck_flop"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
 
                 <ImageView
-                    android:id="@+id/iv_luck_flop"
-                    android:layout_width="105dp"
-                    android:layout_height="34dp"
-                    android:layout_alignParentRight="true"
-                    android:background="@drawable/ic_luck_flop"
-                    android:orientation="horizontal" />
+                    android:id="@+id/iv_luck_normal_flop"
+                    android:layout_width="13.5dp"
+                    android:layout_height="14.5dp"
+                    android:src="@drawable/ic_gift_luck_flop"
+                    android:visibility="gone"
+                    app:layout_constraintBottom_toBottomOf="@id/view_luck"
+                    app:layout_constraintLeft_toLeftOf="@id/view_luck"
+                    app:layout_constraintRight_toRightOf="@id/view_luck"
+                    app:layout_constraintTop_toTopOf="@id/view_luck" />
 
-                <TextView
-                    android:id="@+id/tv_luck_flop"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentRight="true"
-                    android:layout_centerVertical="true"
-                    android:layout_marginRight="34dp"
-                    android:textColor="#FFC81F"
-                    android:textSize="15sp" />
+                <ImageView
+                    android:id="@+id/iv_luck_man_flop"
+                    android:layout_width="37dp"
+                    android:layout_height="37dp"
+                    android:scaleType="fitXY"
+                    android:visibility="gone"
+                    app:layout_constraintBottom_toBottomOf="@id/view_luck"
+                    app:layout_constraintLeft_toLeftOf="@id/view_luck"
+                    app:layout_constraintRight_toRightOf="@id/view_luck"
+                    app:layout_constraintTop_toTopOf="@id/view_luck" />
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerVertical="true"
-                    android:layout_toLeftOf="@id/tv_luck_flop"
-                    android:text="幸运值："
-                    android:textColor="@color/white"
-                    android:textSize="14sp" />
+                <android.support.constraint.ConstraintLayout
+                    android:layout_width="117.5dp"
+                    android:layout_height="16.5dp"
+                    android:layout_marginRight="29.5dp"
+                    android:layout_marginBottom="2dp"
+                    app:layout_constraintBottom_toTopOf="@id/progress_layout"
+                    app:layout_constraintRight_toRightOf="parent">
 
-            </RelativeLayout>
+                    <ImageView
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:scaleType="fitXY"
+                        android:src="@drawable/bg_note_luck_flop" />
+
+                    <TextView
+                        android:id="@+id/tv_note_luck_flop"
+                        android:layout_width="108dp"
+                        android:layout_height="wrap_content"
+                        android:textColor="@color/white"
+                        android:textSize="9sp"
+                        app:layout_constraintLeft_toLeftOf="parent"
+                        app:layout_constraintRight_toRightOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+                </android.support.constraint.ConstraintLayout>
+
+            </android.support.constraint.ConstraintLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
