--- a/app/src/main/res/layout/activity_live_display_new.xml
+++ b/app/src/main/res/layout/activity_live_display_new.xml
@@ -202,8 +202,7 @@
                             android:layout_height="25dp"
                             android:layout_centerVertical="true"
                             android:layout_marginLeft="5dp"
-                            android:layout_toRightOf="@id/rl_head"
-                            android:scaleType="fitXY" />
+                            android:layout_toRightOf="@id/rl_head"/>
 
                         <FrameLayout
                             android:id="@+id/frame_supercar_track"
