--- a/app/src/main/res/layout/item_best_team.xml
+++ b/app/src/main/res/layout/item_best_team.xml
@@ -2,7 +2,56 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="40dp"
-    android:background="@color/black"
-    android:orientation="vertical">
+    android:layout_marginTop="18dp"
+    android:gravity="center_vertical"
+    android:orientation="horizontal">
 
+    <ImageView
+        android:id="@+id/iv_rank_best_team"
+        android:layout_width="17dp"
+        android:layout_height="26dp"
+        android:layout_marginLeft="12dp" />
+
+    <ImageView
+        android:id="@+id/iv_avatar_best_team"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_marginLeft="14dp" />
+
+    <TextView
+        android:id="@+id/tv_name_best_team"
+        android:layout_width="112dp"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="2dp"
+        android:ellipsize="end"
+        android:singleLine="true"
+        android:textColor="@color/white"
+        android:textSize="14sp" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="end"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/tv_tips_best_team"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:ellipsize="end"
+            android:singleLine="true"
+            android:text="战力贡献值："
+            android:textColor="@color/white"
+            android:textSize="12sp" />
+
+        <TextView
+            android:id="@+id/tv_score_best_team"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="12dp"
+            android:ellipsize="end"
+            android:singleLine="true"
+            android:textColor="#FF023B"
+            android:textSize="12sp" />
+    </LinearLayout>
 </LinearLayout>
