--- a/app/src/main/res/layout/fragment_anchor_rank.xml
+++ b/app/src/main/res/layout/fragment_anchor_rank.xml
@@ -15,27 +15,41 @@
         android:paddingTop="30dp">
 
         <ImageView
+            android:id="@+id/iv_level_anchor_rank"
             android:layout_width="45dp"
             android:layout_height="45dp"
-            android:src="@drawable/qualifying26" />
+            android:layout_marginTop="5dp" />
 
         <TextView
+            android:id="@+id/tv_level_anchor_rank"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:text="萌新Ⅴ"
             android:textColor="@color/white"
             android:textSize="12sp" />
 
-        <ProgressBar
-            style="@style/QualifyingProgressBar"
+        <RelativeLayout
             android:layout_width="261dp"
             android:layout_height="19dp"
-            android:layout_marginTop="8dp"
-            android:background="@drawable/bg_progress_qualifying"
-            android:max="100"
-            android:padding="4dp"
-            android:progress="50" />
+            android:layout_marginTop="8dp">
+
+            <ProgressBar
+                android:id="@+id/progress_anchor_rank"
+                style="@style/QualifyingProgressBar"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@drawable/bg_progress_qualifying"
+                android:max="100"
+                android:padding="4dp" />
+
+            <TextView
+                android:id="@+id/tv_progress_anchor_rank"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:textColor="#B3FFFFFF"
+                android:textSize="10sp" />
+        </RelativeLayout>
 
         <View
             android:layout_width="match_parent"
@@ -57,9 +71,9 @@
                 android:orientation="vertical">
 
                 <TextView
+                    android:id="@+id/tv_current_rank"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="333"
                     android:textColor="#6f7dff"
                     android:textSize="18sp"
                     android:textStyle="bold" />
@@ -85,9 +99,9 @@
                 android:orientation="vertical">
 
                 <TextView
+                    android:id="@+id/tv_rank_pk_time"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="333"
                     android:textColor="#6f7dff"
                     android:textSize="18sp"
                     android:textStyle="bold" />
@@ -113,9 +127,9 @@
                 android:orientation="vertical">
 
                 <TextView
+                    android:id="@+id/tv_victory_time_anchor_rank"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="333"
                     android:textColor="#6f7dff"
                     android:textSize="18sp"
                     android:textStyle="bold" />
@@ -141,9 +155,9 @@
                 android:orientation="vertical">
 
                 <TextView
+                    android:id="@+id/tv_victory_ratio"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="333"
                     android:textColor="#6f7dff"
                     android:textSize="18sp"
                     android:textStyle="bold" />
@@ -157,7 +171,6 @@
             </LinearLayout>
 
             <View
-
                 android:layout_width="1dp"
                 android:layout_height="30dp"
                 android:background="#1AFFFFFF" />
@@ -170,9 +183,9 @@
                 android:orientation="vertical">
 
                 <TextView
+                    android:id="@+id/tv_continue_victory_time"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="333"
                     android:textColor="#6f7dff"
                     android:textSize="18sp"
                     android:textStyle="bold" />
