--- a/app/src/main/res/layout/item_power_rank.xml
+++ b/app/src/main/res/layout/item_power_rank.xml
@@ -11,6 +11,7 @@
         android:layout_height="match_parent">
 
         <TextView
+            android:id="@+id/tv_rank_power_rank"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_centerInParent="true"
