--- a/app/src/main/res/layout/item_win_rate.xml
+++ b/app/src/main/res/layout/item_win_rate.xml
@@ -54,8 +54,8 @@
 
         <ImageView
             android:id="@+id/iv_level_win_rate"
-            android:layout_width="54dp"
-            android:layout_height="41dp" />
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
 
         <TextView
             android:id="@+id/tv_level_win_rate"
