--- a/app/src/main/res/layout/fragment_anchor_rank.xml
+++ b/app/src/main/res/layout/fragment_anchor_rank.xml
@@ -2,9 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:paddingLeft="12dp"
-    android:paddingRight="12dp">
+    android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -14,11 +12,24 @@
         android:orientation="vertical"
         android:paddingTop="30dp">
 
-        <ImageView
-            android:id="@+id/iv_level_anchor_rank"
-            android:layout_width="45dp"
-            android:layout_height="45dp"
-            android:layout_marginTop="5dp" />
+        <RelativeLayout
+            android:layout_width="57dp"
+            android:layout_height="47dp">
+
+            <ImageView
+                android:id="@+id/iv_level_anchor_rank"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true" />
+
+            <LinearLayout
+                android:id="@+id/container_rank"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:orientation="horizontal" />
+        </RelativeLayout>
+
 
         <TextView
             android:id="@+id/tv_level_anchor_rank"
