--- a/app/src/main/res/drawable/bg_item_win_rate.xml
+++ b/app/src/main/res/drawable/bg_item_win_rate.xml
@@ -2,6 +2,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid android:color="#2A284A" />
-    <corners android:radius="5dp" />
+    <solid android:color="#1E1C3F" />
 </shape>
