--- a/app/src/main/res/drawable/head_power_rank.xml
+++ b/app/src/main/res/drawable/head_power_rank.xml
@@ -3,5 +3,7 @@
     android:shape="rectangle">
 
     <solid android:color="#2A284A" />
-    <corners android:radius="5dp" />
+    <corners
+        android:topLeftRadius="5dp"
+        android:topRightRadius="5dp" />
 </shape>
