--- a/app/src/main/res/layout/item_win_rate.xml
+++ b/app/src/main/res/layout/item_win_rate.xml
@@ -2,7 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="71dp"
-    android:background="@drawable/bg_item_power_rank"
+    android:layout_marginBottom="6dp"
+    android:background="@drawable/bg_item_win_rate"
     android:gravity="center_vertical"
     android:orientation="horizontal">
 
@@ -23,7 +24,7 @@
 
 
     <LinearLayout
-        android:layout_width="143dp"
+        android:layout_width="130dp"
         android:layout_height="wrap_content"
         android:layout_marginLeft="17dp"
         android:gravity="center_vertical"
@@ -48,14 +49,27 @@
     <LinearLayout
         android:layout_width="54dp"
         android:layout_height="match_parent"
-        android:layout_marginLeft="17dp"
+        android:layout_marginLeft="10dp"
         android:gravity="center"
         android:orientation="vertical">
 
-        <ImageView
-            android:id="@+id/iv_level_win_rate"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+        <RelativeLayout
+            android:layout_width="57dp"
+            android:layout_height="47dp">
+
+            <ImageView
+                android:id="@+id/iv_level_win_rate"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true" />
+
+            <LinearLayout
+                android:id="@+id/container_rank"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:orientation="horizontal" />
+        </RelativeLayout>
 
         <TextView
             android:id="@+id/tv_level_win_rate"
