--- a/app/src/main/res/layout/activity_live_display_new.xml
+++ b/app/src/main/res/layout/activity_live_display_new.xml
@@ -196,13 +196,27 @@
                                 android:src="@drawable/live_display_arrow" />
                         </RelativeLayout>
 
-                        <ImageView
-                            android:id="@+id/iv_qualifying"
+                        <RelativeLayout
+                            android:id="@+id/rl_qualifying"
                             android:layout_width="25dp"
                             android:layout_height="25dp"
                             android:layout_centerVertical="true"
-                            android:layout_marginLeft="5dp"
-                            android:layout_toRightOf="@id/rl_head"/>
+                            android:layout_toRightOf="@id/rl_head">
+
+                            <ImageView
+                                android:id="@+id/iv_qualifying"
+                                android:layout_width="25dp"
+                                android:layout_height="25dp"
+                                android:layout_centerInParent="true" />
+
+                            <LinearLayout
+                                android:id="@+id/container_rank"
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:gravity="center"
+                                android:orientation="horizontal" />
+                        </RelativeLayout>
+
 
                         <FrameLayout
                             android:id="@+id/frame_supercar_track"
@@ -210,7 +224,7 @@
                             android:layout_height="23dp"
                             android:layout_centerVertical="true"
                             android:layout_marginLeft="5dp"
-                            android:layout_toRightOf="@id/iv_qualifying"
+                            android:layout_toRightOf="@id/rl_qualifying"
                             android:visibility="gone" />
 
                         <android.support.constraint.ConstraintLayout
@@ -219,7 +233,7 @@
                             android:layout_centerVertical="true"
                             android:layout_marginLeft="10dp"
                             android:layout_marginRight="5dp"
-                            android:layout_toRightOf="@id/iv_qualifying">
+                            android:layout_toRightOf="@id/rl_qualifying">
 
                             <com.whzl.mengbi.ui.widget.view.AutoScrollTextView
                                 android:id="@+id/tv_run_way_gift"
