--- a/app/src/main/res/layout/activity_flop.xml
+++ b/app/src/main/res/layout/activity_flop.xml
@@ -120,7 +120,7 @@
 
                     <com.whzl.mengbi.ui.widget.view.RoundCornerImageView
                         android:id="@+id/progress_luck"
-                        android:layout_width="120dp"
+                        android:layout_width="116dp"
                         android:layout_height="7dp"
                         android:layout_marginEnd="0dp"
                         android:scaleType="centerCrop" />
@@ -177,8 +177,9 @@
                         android:id="@+id/tv_note_luck_flop"
                         android:layout_width="108dp"
                         android:layout_height="wrap_content"
+                        android:gravity="bottom"
                         android:textColor="@color/white"
-                        android:textSize="9sp"
+                        android:textSize="8sp"
                         app:layout_constraintLeft_toLeftOf="parent"
                         app:layout_constraintRight_toRightOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
