--- a/app/src/main/res/layout/flipper_flop.xml
+++ b/app/src/main/res/layout/flipper_flop.xml
@@ -10,6 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ellipsize="end"
+        android:gravity="center"
         android:singleLine="true"
         android:textColor="@color/white"
         android:textSize="12sp" />
